overflow solved

--- a/my_portfolio/app/globals.css
+++ b/my_portfolio/app/globals.css
@@ -124,10 +124,3 @@ body, html {
     @apply bg-background text-foreground;
   }
 }
-
-body {
-  overflow: hidden;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
